--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <head>
 	<title><% @title %></title>
 	<%= render 'layouts/stylesheets' %>
+	<%= render 'layouts/javascripts' %>
 </head>
 <body>
 <div class="navbar navbar-fixed-top">  
