--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -1,2 +1,3 @@
-<%= javascript_include_tag '/jquery.js' %>
-<%= javascript_include_tag '/jquery-1.7.1.min.js' %>
+<%= javascript_include_tag '/javascripts/jquery.js' %>
+<%= javascript_include_tag '/prototype.js' %>
+<%= javascript_include_tag '/javascripts/jquery-1.7.1.min.js' %>
