--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -67,7 +67,7 @@ jQuery('.remove').live('click', function(){
 });
 
 <% end %>
-<h1>Survey</h1>
+<h1>Survey</h1><br/>
 <% form_for @survey, :html => {:class=>'form-horizontal'} do |s| %>
 	<div class="control-group">
 		<%= s.label :name, "Survey Name", :class=>"control-label" %>
