--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,2 +1,12 @@
-<h1>INDEX</h1>
-<p>Find me in app/views/contacts/new.html.erb</p>
+<h2>Your Contacts</h2>
+
+<table class="table table-striped">
+	<tr><th>#</th><th>Contact Name</th><th>Phone</th><th>Email</th></tr>
+	<% @contacts.each do |list| %>
+	<tr><td><%= list.id %></td><td><%= list.name %></td><td><%= list.phone %></td><td><%= list.email %></td></tr>
+	<% end %>
+</table>
+
+	<% if @contacts.empty? %>
+	<div class="no-surveys"> You do not have any contacts </div>
+	<% end %>
