--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,23 +8,27 @@
 <div class="navbar navbar-fixed-top">  
 <div class="navbar-inner">  
 <div class="container"> 
+	<a href="<%= account_path %>"><span class="logo"></span></a>
 <div class="nav-collapse">  
-<ul class="nav">  
+<ul class="nav nav_here">  
 <% if !current_user %>
   <li class="active"><%= link_to "Register", new_account_path %></li>
   <li><%= link_to "Log In", new_user_session_path %></li>
 <% else %>
   <li class="active"><%= link_to "My Account", account_path %></li>
+  <li><%= link_to "Surveys", surveys_path %></li>
+  <li><%= link_to "Contacts", contacts_path %></li>
+  <li><%= link_to "Lists", lists_path %></li>
   <li><%= link_to "Logout", user_session_path, :method => :delete, :confirm => "Are you sure you want to logout?" %></li>
 <% end %>
 </ul>  
-<%= pluralize User.logged_in.count, "user" %> logged in <!-- This based on last_request_at, if they were active < 10 minutes they are logged in -->
+<!--<%= pluralize User.logged_in.count, "user" %> logged in <!-- This based on last_request_at, if they were active < 10 minutes they are logged in -->
 </div>
 </div><!--/.nav-collapse -->  
 </div>  
 </div>  
 </div> 
-<div class="container">
+<div class="container body-page">
 	<div class="leaderboard">
 <p style="color: green"><%= flash[:notice] %></p>
 <div><%= yield %></div>
