--- a/public/stylesheets/screen1.css
+++ b/public/stylesheets/screen1.css
@@ -1,5 +1,6 @@
 .leaderboard{
 	margin-top: 60px;
+	background-color: white;
 }
 
 .control-group .control-label{
@@ -73,4 +74,58 @@ div.span7 input[type="text"]{
 	border-radius: 5px;
 	padding-top: 75px;
 	background-color: rgb(247, 247, 247);
+}
+
+.navbar-inner{
+	height: 62px;
+	background-color: #5b5b5b;
+	background-image: none;
+}
+
+.body-page{
+	width: 72%;
+	padding: 10px;
+	background-color: white;
+	margin-top: 55px;
+	box-shadow: 0 5px 5px #888;
+	min-height: 500px;
+}
+
+.logo{
+	background: url('/images/freshsurveyLogo.png') no-repeat;
+	width: 265px;
+	height: 62px;
+	display: inline-block;
+	z-index: 2000;
+}
+
+.nav-collapse{
+	display: inline-block;
+	width: 65%;
+	float: right;
+}
+
+ul.nav_here li a{
+		height: 45% !important;
+		font-size: 18px !important;
+		font-weight: lighter;
+		background-color: #8e8e8e !important;
+		color: #000 !important;
+		padding-top: 23px !important;
+}
+
+ul.nav_here li.active a{
+	background-color: white !important;
+}
+
+.nav_here{
+	float: none !important;
+}
+
+.form-horizontal{
+	margin-left: 97px;
+}
+
+#survey_name{
+	width: 84%;
 }
