--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -3,7 +3,7 @@
 <table class="table table-striped">
 	<tr><th>#</th><th>Survey Name</th><th>Type</th></tr>
 	<% @surveys.each do |survey| %>
-	<tr><td><%= survey.id %></td><td><%= survey.name %></td><td><%= Voice %></td>
+	<tr><td><%= survey.id %></td><td><%= survey.name %></td><td>Voice</td>
 	<% end %>
 </table>
 
